# dkdc-links

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  WARP.md  pyproject.toml
.github/workflows/: check.yml  release-python.yml  release.yml
dkdc-links/: Cargo.toml
dkdc-links-py/: Cargo.toml
dkdc-links-py/src/: lib.rs
dkdc-links/src/: app.rs  cli.rs  config.rs  gui.rs  lib.rs  main.rs  open.rs  storage.rs  strings.rs  toml_storage.rs  webapp.rs
src/: config.rs  open.rs
src/dkdc_links/: __init__.py  core.pyi
