[project]
name = "dkdc-links"
version = "2.1.0"
description = "Bookmarks in your terminal"
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
dkdc-links = "dkdc_links:main"

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "ruff>=0.9", "pytest>=8"]

[tool.maturin]
module-name = "dkdc_links.core"
python-packages = ["dkdc_links"]
python-source = "src"
manifest-path = "dkdc-links-py/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "dkdc-links/**/*.rs" },
    { file = "dkdc-links-py/**/*.rs" },
]
