[workspace]

[package]
name = "dkdc-links-py"
version = "3.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
dkdc-links = { path = "../dkdc-links", features = ["app", "webapp"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
