[workspace]

[package]
name = "dkdc-links"
version = "2.0.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
description = "Bookmarks in your terminal"
repository = "https://github.com/lostmygithubaccount/dkdc-links"
homepage = "https://github.com/lostmygithubaccount/dkdc-links"
license = "MIT"

[lib]
name = "dkdc_links"
path = "src/lib.rs"

[[bin]]
name = "dkdc-links"
path = "src/main.rs"

[features]
gui = ["dep:iced"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
iced = { version = "0.14", features = ["tokio", "svg"], optional = true }
open = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
