[workspace]

[package]
name = "dkdc-links"
version = "3.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
description = "Bookmarks in your terminal"
repository = "https://github.com/lostmygithubaccount/dkdc-links"
homepage = "https://github.com/lostmygithubaccount/dkdc-links"
license = "MIT"

[lib]
name = "dkdc_links"
path = "src/lib.rs"

[[bin]]
name = "dkdc-links"
path = "src/main.rs"

[features]
app = ["dep:iced"]
webapp = ["dep:axum", "dep:tokio"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", optional = true }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
iced = { version = "0.14", features = ["tokio", "svg"], optional = true }
open = "5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"], optional = true }
toml = "0.9"

[dev-dependencies]
tempfile = "3"
